...
    /**
     Action outlet that handles when the measurementSelector is changed.
     - Changes the appended unit to the data displayed on measurementReading.text
     */
    @IBAction func measurementSelectorChanged(_ sender: Any) {
        if measurementSelector.selectedSegmentIndex == 0 {
            self.measurementReading.text = "-- V"
            measurementChart.chartDataSet.label = "Voltage"
            yAxisDivisonLabel.text = String(format: "%d V", Int(yAxisStepper.value))
        } else if measurementSelector.selectedSegmentIndex == 1 {
            self.measurementReading.text = "-- A"
            measurementChart.chartDataSet.label = "Current"
            yAxisDivisonLabel.text = String(format: "%d A", Int(yAxisStepper.value))
        } else if measurementSelector.selectedSegmentIndex == 2 {
            self.measurementReading.text = "-- Ω"
            measurementChart.chartDataSet.label = "Resistance"
            yAxisDivisonLabel.text = String(format: "%d Ω", Int(yAxisStepper.value))
        }
    }
    
    /**
     Action outlet that handles when the timeDivisionStepper is tapped.
...
        }
    }
    
    /**
    Action outlet that handles the pressing of the snapshot button.
    - Displays a modal alert with a screenshot of the measurement graph in its current state.
    - Saves screenshot of graph to the users camera roll if "Yes" is selected.
    - Does nothing and closes alert when "No" is selected
     
     - Parameter sender: the snapshot button
    */
    @IBAction func snapshotButtonTapped(_ sender: Any) {
        let renderer = UIGraphicsImageRenderer(size: measurementChart.bounds.size)
        let image = renderer.image { ctx in
...
    */
    func setConnectionIcon() {
        if self.bleManager.isConnected() {
            self.connectionIcon.setImage(UIImage(systemName: "checkmark.seal"), for: .normal)
            self.connectionIcon.tintColor = self.primaryColor
        } else {
            self.connectionIcon.setImage(UIImage(systemName: "exclamationmark.triangle"), for: .normal)
            self.connectionIcon.tintColor = UIColor.red
        }
    }
    
    /**
        Function that starts and stops the Timer for the time label.
...
