...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--rootViewController-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="Root View Controller" title="rootViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="rootViewController" customModule="Bluemeter" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" userLabel="rootView">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aup-VN-oX3" userLabel="topView">
                                <rect key="frame" x="0.0" y="140" width="414" height="50"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="szW-1y-Yc3">
                                        <rect key="frame" x="30" y="10" width="30" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" image="line.horizontal.3" catalog="system">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                        </state>
                                        <connections>
                                            <action selector="menuButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="adC-ha-RPl"/>
                                        </connections>
...
                                        </constraints>
                                    </view>
                                    <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6by-MU-3F7">
                                        <rect key="frame" x="20" y="405" width="58" height="56"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                        <color key="tintColor" red="0.1764705882" green="0.3411764706" blue="0.52941176469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <state key="normal" image="largecircle.fill.circle" catalog="system">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40" scale="large"/>
                                        </state>
                                        <connections>
                                            <action selector="snapshotButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zbl-6j-68e"/>
                                        </connections>
                                    </button>
...
            </objects>
            <point key="canvasLocation" x="3768.115942028986" y="75.669642857142847"/>
        </scene>
        <!--Menu-->
        <scene sceneID="xGA-k9-RA7">
            <objects>
                <tableViewController title="Menu" id="V3S-B0-8Zy" customClass="menuTableViewController" customModule="Bluemeter" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="2L8-zl-cvC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellId" id="cAY-wu-71v">
...
